--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
 									<div class="stat-box">
 										<img src="images/code.png" alt="Lines of Codes" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">414377</span></strong><div>Lines of Codes</div>
+											<strong><span class="counter-up">415377</span></strong><div>Lines of Codes</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/coffee.png" alt="Cup of Coffee" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">2114</span></strong><div>Cups of Coffee</div>
+											<strong><span class="counter-up">2132</span></strong><div>Cups of Coffee</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/project.png" alt="Successful Projects" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">62</span></strong><div>Successful Projects</div>
+											<strong><span class="counter-up">63</span></strong><div>Successful Projects</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
@@ -244,6 +244,19 @@
 					<div class="my-portfolio">
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
+							<li>
+								<div class="portfolio-layer third-bg">
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>Dripology</h4>
+											<p>Dripology is the premium medical IV solution service serving the Los Angeles area. Utilizing custom protocols with recommendations by The American Academy of Anti-Aging Medicine, their treatment are tailored to provide clients with a boost in all facets of life.</p>
+											<a class="bttn has-icon read-more" href="dripology.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/dripology-thumb.jpg" alt="Dripology Website by Saman Rashidi" />
+							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
 									<a class="close" href="javascript:void(0)"></a>
