--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,13 @@
 		<meta property="og:site_name" content="Saman Rashidi" />
 		<meta property="og:image" content="http://www.samanrashidi.com/img/saman_rashidi.48968b0c.png" />
 		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
-    <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-iphone-retina.png">
+    <link rel="apple-touch-startup-image" href="launch.jpg" />
+    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="apple-launch-750x1334.jpg" />
 
 		<!-- Javascript Files
     	================================================== -->
